--- a/ElectroTrading.Api/appsettings.json
+++ b/ElectroTrading.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=ElectroTrading;User Id=postgres;Password=12345;Include Error Detail=true"
+  },
+  "JWTConfiguration": {
+    "ValidAudience": "ElectroTrading",
+    "ValidIssuer": "ElectroTrading",
+    "Secret": "ElectroTradingSecretWordForJwtBeareerIdentification"
+  },
   "AllowedHosts": "*"
 }
