Added some usecases

--- a/ElectroTrading.Application/ElectroTrading.Application.csproj
+++ b/ElectroTrading.Application/ElectroTrading.Application.csproj
@@ -17,4 +17,19 @@
     <ProjectReference Include="..\ElectroTrading.Domain\ElectroTrading.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCase\Attendances\CommandHandlers\" />
+    <Folder Include="UseCase\Attendances\QueryHandlers\" />
+    <Folder Include="UseCase\Orders\CommandHandlers\" />
+    <Folder Include="UseCase\Orders\QueryHandlers\" />
+    <Folder Include="UseCase\Products\CommandHandlers\" />
+    <Folder Include="UseCase\Products\QueryHandlers\" />
+    <Folder Include="UseCase\Salary\Commands\" />
+    <Folder Include="UseCase\Salary\CommandHandlers\" />
+    <Folder Include="UseCase\Salary\QueryHandlers\" />
+    <Folder Include="UseCase\Salary\Queries\" />
+    <Folder Include="UseCase\Users\CommandHandlers\" />
+    <Folder Include="UseCase\Users\QueryHandlers\" />
+  </ItemGroup>
+
 </Project>
