--- a/ElectroTrading.Api/Properties/launchSettings.json
+++ b/ElectroTrading.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7075;http://localhost:5036",
+      "applicationUrl": "http://localhost:7075;http://localhost:5036",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
