--- a/ElectroTrading.Api/Properties/launchSettings.json
+++ b/ElectroTrading.Api/Properties/launchSettings.json
@@ -4,17 +4,27 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:34617",
-      "sslPort": 44338
+      "applicationUrl": "http://localhost:36416",
+      "sslPort": 44371
     }
   },
   "profiles": {
-    "ElectroTrading.Api": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7075;http://localhost:5036",
+      "applicationUrl": "http://192.168.0.103:5010",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7209;http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
