--- a/ElectroTrading.Api/ElectroTrading.Api.csproj
+++ b/ElectroTrading.Api/ElectroTrading.Api.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\ElectroTrading.Infrastructure\ElectroTrading.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Files\Photos\" />
+  </ItemGroup>
+
 </Project>
