--- a/ElectroTrading.Api/appsettings.json
+++ b/ElectroTrading.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ElectroTrading;User Id=postgres;Password=12345;Include Error Detail=true"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ElectroTrading;User Id=postgres;Password=123456789;Include Error Detail=true"
   },
   "JWTConfiguration": {
     "ValidAudience": "ElectroTrading",
