--- a/ElectroTrading.Api/ElectroTrading.Api.csproj
+++ b/ElectroTrading.Api/ElectroTrading.Api.csproj
@@ -19,7 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\Files\" />
   </ItemGroup>
 
 </Project>
