--- a/ElectroTrading.Application/ElectroTrading.Application.csproj
+++ b/ElectroTrading.Application/ElectroTrading.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+    <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
   <ItemGroup>
