--- a/ElectroTrading.Api/appsettings.json
+++ b/ElectroTrading.Api/appsettings.json
@@ -13,5 +13,9 @@
     "ValidIssuer": "ElectroTrading",
     "Secret": "ElectroTradingSecretWordForJwtBeareerIdentification"
   },
+  "TelegramBot": {
+    "UserIds": "1696570865,636809820",
+    "Token": "5255513447:AAGe6QnkefU1VT9jNH8yj4S02OlUWBN0Hsk"
+  },
   "AllowedHosts": "*"
 }
