--- a/ElectroTrading.Api/appsettings.json
+++ b/ElectroTrading.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ElectroTrading;User Id=postgres;Password=12345;Include Error Detail=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ElectroTrading;User Id=postgres;Password=12345"
   },
   "JWTConfiguration": {
     "ValidAudience": "ElectroTrading",
@@ -14,8 +14,8 @@
     "Secret": "ElectroTradingSecretWordForJwtBeareerIdentification"
   },
   "TelegramBot": {
-    "UserIds": "5498488668, 1696570865, 636809820",
-    "Token": "5255513447:AAGe6QnkefU1VT9jNH8yj4S02OlUWBN0Hsk"
+    "UserIds": "5498488668, 1696570865, 636809820, 1023561736",
+    "Token": "5839899422:AAFkamYEJlde8wRSzkTTLfN_1FCotnk7y6g"
   },
   "AllowedHosts": "*"
 }
