--- a/ElectroTrading.Api/appsettings.json
+++ b/ElectroTrading.Api/appsettings.json
@@ -14,7 +14,7 @@
     "Secret": "ElectroTradingSecretWordForJwtBeareerIdentification"
   },
   "TelegramBot": {
-    "UserIds": "5498488668, 1696570865, 636809820, 1023561736",
+    "UserIds": "5498488668, 1696570865, 636809820, 1023561736, 2057734958, 1328145377, 880286037",
     "Token": "5839899422:AAFkamYEJlde8wRSzkTTLfN_1FCotnk7y6g"
   },
   "AllowedHosts": "*"
